--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,6 +12,6 @@ dependencies:
   equatable: ">=2.0.5 <3.0.0"
 
 dev_dependencies:
-  custom_lint: ">=0.6.4 <0.8.0"
+  custom_lint: ">=0.6.4 <=0.8.0"
   equatable_lint:
     path: ../
